WorkingWithInsertDataFrom WPF_part

--- a/AdminFormel1Wpf/AdminFormel1Wpf.csproj
+++ b/AdminFormel1Wpf/AdminFormel1Wpf.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Formel1.Database\Formel1.Database.csproj">
+      <Project>{5f1aed61-55df-432c-9609-be7294ac28f7}</Project>
+      <Name>Formel1.Database</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
