--- a/AdminFormel1Wpf/App.config
+++ b/AdminFormel1Wpf/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+  <connectionStrings>
+    <add name="formel1Db"
+      providerName="System.Data.SqlClient"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=database;Integrated Security=True;AttachDBFilename=c:\database.mdf" />
+  </connectionStrings>
 </configuration>
