Add connectionString to the ASP-part, fix the database name, and remove the local .mdf file

--- a/Formel1.Database/App.config
+++ b/Formel1.Database/App.config
@@ -10,7 +10,7 @@
   <connectionStrings>
     <add name="formel1Db"
       providerName="System.Data.SqlClient"
-      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=database;Integrated Security=True;AttachDBFilename=c:\database.mdf" />
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Initial Catalog=database;Integrated Security=True" />
   </connectionStrings>
   
   <entityFramework>
